--- a/src/app/features/auth/trip-details/trip-details.component.html
+++ b/src/app/features/auth/trip-details/trip-details.component.html
@@ -324,7 +324,8 @@
                             </div>
                         </div>
                     </div>
-
+                    {{errr}}
+                    {{token}}
                     <!-- Submit Button -->
                     <div class="submit-section">
                         <button type="submit" class="submit-button" [disabled]="!isFormValid()">
