--- a/src/app/features/auth/trip-details/trip-details.component.scss
+++ b/src/app/features/auth/trip-details/trip-details.component.scss
@@ -461,7 +461,7 @@ $cairo-font: 'Cairo', sans-serif;
 
     img {
         width: 100%;
-        height: 100%;
+        height: 100% !important;
     }
 }
 
@@ -473,6 +473,12 @@ $cairo-font: 'Cairo', sans-serif;
     line-height: 26px;
     width: 427.48px;
     margin: 0;
+    direction: rtl;
+
+    @media (max-width : 460px) {
+        width: 100%;
+
+    }
 }
 
 .testimonial-author {
@@ -483,6 +489,11 @@ $cairo-font: 'Cairo', sans-serif;
     padding-left: 232.97px;
     width: 100%;
     gap: 16px;
+
+    @media (max-width : 460px) {
+        padding: 0;
+
+    }
 }
 
 .author-avatar {
