--- a/src/app/features/auth/trip-details/trip-details.component.html
+++ b/src/app/features/auth/trip-details/trip-details.component.html
@@ -8,7 +8,7 @@
                         <div class="back-icon">
                             <img src="assets/icons/chevron-back.svg" alt="رجوع">
                         </div>
-                        <span class="back-text">العودة إلى التسجيل </span>
+                        <a href="/signup" class="back-text">العودة إلى التسجيل </a>
 
                     </div>
 
