butotn landin update

--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -106,11 +106,7 @@
                             ويوفر لهم تطبيق إلكتروني سهل الاستخدام ومزود بخيارات مرنة تتناسب مع احتياجات المستخدم.
                         </p>
                         <ul>
-                            <li><a
-                                    href="https://apps.apple.com/us/app/muri-%D9%85%D9%88%D8%B1%D9%8A-%D9%84%D9%84%D9%86%D9%82%D9%84-%D8%A7%D9%84%D8%AC%D9%85%D8%A7%D8%B9%D9%8A/id1672855064"><i
-                                        class="muri-apple"></i> التحميل من ابل ستور</a></li>
-                            <li><a href="https://play.google.com/store/apps/details?id=com.muri.customer"><i
-                                        class="muri-play "></i> التحميل من جوجل بلاي</a></li>
+                            <li><a href="/signup"> احجز رحلتك الان</a></li>
                         </ul>
                     </div>
                 </div>
