--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -405,17 +405,8 @@
                                 <div class="appie-project-content text-right">
                                     <h3 class="title pt-56">سجل الآن </h3>
                                     <p>لا تشيل هم المواصلات.</p>
-                                    <div class="input-box  mt-30 row p-0  ">
-                                        <button class="buttonx"><a
-                                                href="https://apps.apple.com/us/app/muri-%D9%85%D9%88%D8%B1%D9%8A-%D9%84%D9%84%D9%86%D9%82%D9%84-%D8%A7%D9%84%D8%AC%D9%85%D8%A7%D8%B9%D9%8A/id1672855064"><img
-                                                    src="../../../assets/image/App%20store%20icon.png"
-                                                    alt=""></a></button>
-                                        <button class="buttonx "><a
-                                                href="https://play.google.com/store/apps/details?id=com.muri.customer"><img
-                                                    src="../../../assets/image/Play%20store%20store%20icon.png"
-                                                    alt=""></a></button>
+                                        <a href="/signup" class="buttonon"> احجز رحلتك الان</a>
 
-                                    </div>
                                 </div>
                             </div>
                         </div>
