--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,9 +10,10 @@
                     <ul>
                         <li><a href="mailto: info&#64;rapidshift.sa"><img src="../../../assets/image/email.svg" alt="">
                                 info&#64;muri.sa</a></li>
-                        <li><a style="direction: ltr;" 
-                                href="https://api.whatsapp.com/send/?phone=%2B966566191383&text&type=phone_number&app_absent=0">+966 56 619 1383 <img
-                                    src="../../../assets/image/whatsapp.svg"  alt=""></a></li>
+                        <li><a style="direction: ltr;"
+                                href="https://api.whatsapp.com/send/?phone=%2B966566191383&text&type=phone_number&app_absent=0">+966
+                                56 619 1383 <img
+                                    src="../../../assets/image/whatsapp.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -51,14 +52,6 @@
                         </ul>
                     </div>
                     <div class="appie-hero-content">
-
-                        <ul class="p-0 m-0">
-                            <li class="pt-24 pb-12 pr-0"><a
-                                    href="https://apps.apple.com/us/app/muri-%D9%85%D9%88%D8%B1%D9%8A-%D9%84%D9%84%D9%86%D9%82%D9%84-%D8%A7%D9%84%D8%AC%D9%85%D8%A7%D8%B9%D9%8A/id1672855064"><i
-                                        class="muri-apple"></i> التحميل من ابل ستور</a></li>
-                            <li><a class=" " href="https://play.google.com/store/apps/details?id=com.muri.customer"><i
-                                        class="muri-play "></i> التحميل من جوجل بلاي</a></li>
-                        </ul>
                     </div>
                 </div>
             </div>
